# epic-prediction-bot

./: pyproject.toml
.github/workflows/: check_openrouter_credits.yaml  minibench_mybot_history.yaml  minibench_top_bots_analysis.yaml  run_bot_on_metaculus_cup.yaml  run_bot_on_minibench.yaml  run_bot_on_tournament.yaml  test_bot.yaml
metaculus_bot/: constants.py  fallback_openrouter.py  llm_configs.py
metaculus_bot/minibench_analysis/: __init__.py  aggregate.py  cli.py  client.py  parse.py  report.py  scoring.py
tests/: test_ablation_run_stacker.py  test_fallback_openrouter.py  test_minibench_cli.py  test_minibench_client.py  test_minibench_parse.py  test_minibench_scoring.py
