[tool.poetry]
name = "metac-bot-template"
version = "0.1.0"
description = ""
authors = ["Vasile Popescu <elisescu@elisescu.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
asknews = "^0.11.2"
numpy = "^2.3.0"
openai = "^1.57.4"
python-dotenv = "^1.0.1"
forecasting-tools = "0.2.54"
litellm = "^1.59.1"
aiohttp = "^3.12.15"
yfinance = "^0.2.48"
fredapi = "^0.5.2"
google-genai = "^1.74.0"
rapidfuzz = "^3.14.3"
scipy = "^1.12.0"
pandas = "^2.2.3"
pydantic = "^2.9.2"
# supply-chain note: prefer pinning; avoid adding packages published <1wk ago.
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"

pre-commit = "^4.3.0"
ruff = "^0.15.1"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
# flake8-async (ASYNC*) and flake8-pydantic (PYD*) run via the pre-commit flake8
# hook, not ruff. Declaring their codes as external stops ruff from warning
# "Invalid rule code" on the # noqa suppressions those linters consume.
external = ["ASYNC", "PYD"]

[tool.pytest.ini_options]
markers = [
    "live: requires real API keys and makes real LLM calls (deselected by default)",
    "e2e: end-to-end pipeline tests with mocked LLMs",
    "integration: cross-component contract tests",
]
addopts = "-m 'not live'"
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
